# react-native-mediapipe-llm

./: .gitignore  .gitmodules  .npmignore  .pnp.cjs  BUILD.md  CHANGELOG.md  CMakeLists.txt  README.md  app.json  build-android-submodule.sh  package-lock.json  package.json  react-native-mediapipe-llm.podspec  tsconfig.build.json  tsconfig.json
android/: build.gradle  gradle.properties  proguard-rules.pro
android/src/main/: AndroidManifest.xml  AndroidManifestNew.xml
android/src/main/java/com/reactnativemediapipellm/: MediapipeLlmCore.kt  MediapipeLlmModel.kt  MediapipeLlmModule.kt  MediapipeLlmNativeModule.java  MediapipeLlmPackage.kt  MemoryManager.kt  ModelLoader.kt
cpp/: JSI_Helpers.cpp  JSI_Helpers.h  MediapipeLlm.cpp  MediapipeLlm.h  MediapipeStub.cpp
cpp/android/: MediapipeLlm_Android.cpp
cpp/ios/: MediapipeLlm_iOS.mm
demo/: TestComponent.tsx  app.json  metro.config.js  package-lock.json  package.json
demo/android/: settings.gradle
demo/android/app/: build.gradle
demo/android/app/src/main/: AndroidManifest.xml
demo/android/app/src/main/java/com/subhajitgorai/demo/: MainActivity.kt  MainApplication.kt
demo/android/app/src/main/res/values/: strings.xml
demo/app/: _layout.tsx  index.tsx
demo/ios/: Podfile
demo/ios/demo/: AppDelegate.swift  Info.plist
demo/ios/demo.xcodeproj/: project.pbxproj
demo/scripts/: reset-project.js
ios/: MediapipeLlm.h  MediapipeLlm.m  MediapipeLlmModel.swift  MediapipeLlmModule.swift
scripts/: build-cpp.sh  post-install.js  prebuild.js  setup.sh  validate-build.sh
src/: MediaPipeLlm.ts  NativeMediapipeLlm.ts  NativeModule.ts  index.ts  simple.ts
